最主要的是处理了commonId的security Unstable 导致的缓存BUG